# personal-site

./: .geminiignore  .gitignore  Dockerfile  GEMINI.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_container.sh  tailwind.config.js  vite.config.ts
.gemini/skills/server-debug/: SKILL.md
.gemini/skills/server-debug/references/: COMMANDS.md  DEPLOYMENT.md
.gemini/skills/server-debug/scripts/: ec2-login.sh
.github/workflows/: deploy-backend.yml  main.yml
agarcia/: __init__.py  about.py  config.py  input.css
agarcia/docs/: config
agarcia/scripts/: dev.py
agarcia/static/: style.css
agarcia/templates/: about.html  base.html  config.html  home.html
deploy/: DOTFILES_SYNC.md  nginx-backend-only.conf  nginx.conf  on-boot.sh  refresh-server.sh  setup.sh
docs/: CNAME  about  home  index.html
docs/about/: index.html
docs/config/: index.html
docs/home/: index.html
docs/static/: style.css
new-site/: package-lock.json  package.json
new-site/src/: App.tsx
new-site/src/components/: Footer.tsx  Header.tsx  Layout.tsx  Navigation.tsx
new-site/src/pages/: About.tsx  Dotfiles.tsx  Home.tsx
server/: .custom  Dockerfile  index.js  index.ts  package-lock.json  package.json  setup_container.sh  setup_restricted.sh  start_dev.sh  tsconfig.json
src/: App.tsx  index.css  main.tsx
src/assets/: Icons.tsx
src/components/: Footer.tsx  GitLog.tsx  Header.tsx  Layout.tsx  Terminal.tsx
src/pages/: About.tsx  Dotfiles.tsx  Home.tsx  NotFound.tsx
src/personal_site/: __init__.py
