[project]
name = "personal-site"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Garcia", email = "agarcia1359@gmail.com" }
]
dependencies = [
    "flask>=2.3.3",
    "gunicorn>=21.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "pyright>=1.1.328",
]

[tool.rye.scripts]
start = { cmd = ["gunicorn", "-w", "4", "agarcia:create_app()"] }
dev = { cmd = [ "python", "agarcia/scripts/dev.py", "flask --app agarcia run --debug", "./node_modules/.bin/tailwindcss -i agarcia/input.css -o agarcia/static/style.css" ] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["agarcia"]
venvPath = "."
venv = ".venv"
