[project]
name = "personal-site"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Garcia", email = "agarcia1359@gmail.com" }
]
dependencies = [
    "flask>=2.3.3",
    "gunicorn>=21.2.0",
    "Frozen-Flask>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "pyright>=1.1.328",
    "hatch>=1.9.1",
]

[tool.rye.scripts]
dev = { cmd = [ "python", "agarcia/scripts/dev.py", "flask --app agarcia run --debug", "./node_modules/.bin/tailwindcss -i agarcia/input.css -o agarcia/static/style.css" ] }
freeze = { cmd = [ "python", "agarcia/__init__.py" ] }
index = { cmd = [ "cp", "agarcia/docs/home", "agarcia/docs/index.html" ] }
build = { chain = [ "freeze", "index" ] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agarcia"]

[tool.pyright]
include = ["agarcia"]
venvPath = "."
venv = ".venv"
